--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,5 +1,7 @@
-.header{
+.header .container {
     display: flex;
     justify-content: space-between;
-    padding: 28px 692px 28px 64px;
+    padding: 28px 652px 28px 64px;
+    background-color: var(--inputs);
 }
+
