--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,12 @@ body {
   font-weight: var(--font-weight-regular);
   line-height: var(--line-height);
 }
-
+.container {
+  max-width: 1440px;
+  padding-left: 64px;
+  padding-right: 64px;
+  margin: 0 auto;
+}
 h1,
 h2,
 h3,
