--- a/src/pages/CatalogPage/CatalogPage.module.css
+++ b/src/pages/CatalogPage/CatalogPage.module.css
@@ -1,3 +1,18 @@
+.container {
+    display: flex;
+    column-gap: 64px;
+}
+.wrapper{
+ display: flex;
+ flex-direction: column;
+ row-gap: 40px;
+ align-items: center;
+ justify-content: center;
+} 
+.list {
+  margin-bottom: 40px;
+}
+
 .button {
     padding: 16px 32px;
     border-color: transparent;
@@ -6,6 +21,7 @@
     font-size: 16px;
     font-weight: 500;
     color:var(--main);
+    cursor: pointer;
   }
 
   .button:hover  {
