--- a/src/components/BookingForm/BookingForm.module.css
+++ b/src/components/BookingForm/BookingForm.module.css
@@ -1,17 +1,131 @@
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 14px;
+}
+.fieldContainer {
+  position: relative;
+}
 .label {
-    font-size: 16px;
-    color: var(--gray);
+  position: absolute;
+  top: 18px;
+  left: 18px;
+  z-index: 100;
 
+  color: var(--gray);
+  font-size: 16px;
+  color: var(--gray);
+}
+.fieldInput {
+  width: 527px;
+  display: inline-block;
+  padding: 18px;
+  border: none;
+}
+.button {
+  max-width: 166px;
+  margin-top: 10px;
+  padding: 16px 60px;
+  border: none;
+  border-radius: 200px;
+  background-color: var(--buttons);
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--white);
+  cursor: pointer;
 }
 
-.button {
-    padding: 16px 60px;
-    border: none;
-    border-radius: 200px;
-    background-color: var(--buttons);
-    font-size: 16px;
-    font-weight: 500;
-    color: var(--white);
-    cursor: pointer;
+.error {
+  padding: 12px 20px;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: red;
+  border-radius: 20px;
+  color: var(--main);
+  text-align: center;
+}
+
+.customDatepicker {
+  width: 527px;
+  display: inline-block;
+  padding: 18px;
+  border: none;
+  font-size: 16px;
+}
+
+:global(.react-datepicker__navigation-icon::before) {
+    border-color: var(--text);
   }
+  :global(.react-datepicker__header) {
+  background-color: transparent;
+  border-color: var(--text);
+  border-top-left-radius: 12px;
+}
+
+.customDatepicker {
+  outline: solid blue 2px;
+}
+
+:global(.react-datepicker) {
+  border-color: var(--text);
+  background-color: transparent;
+}
+
+:global(.customCalendar) :global(.react-datepicker__current-month) {
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.2;
+  color: var(--main);
+}
+
+:global(.react-datepicker__day-name) {
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.2;
+  text-align: center;
+  color: var(--text);
+  text-transform: uppercase;
+}
+:global(.react-datepicker__day) {
+  width:32px;
+  height: 32px;
+  font-family: Inter;
+  font-size: 14px;
+
+  line-height: 1.2;
+  color: var(--main);
+}
+
+:global(.react-datepicker__day--selected),
+:global(.react-datepicker__day--keyboard-selected) {
   
+  border-radius: 32px;
+  background-color: var(--text);
+  color: var(--inputs);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+/* :global(.react-datepicker__triangle path) {
+  fill: none; 
+   stroke:var(--text);
+   stroke-width: 1px;
+} */
+
+:global(.react-datepicker__triangle clipPath) {
+  /* fill: transparent; */
+  /* stroke:transparent; */
+}
+
+:global(.react-datepicker__triangle) {
+  /* fill: var(--text); */
+  /* stroke:transparent; */
+}
+
+:global(.react-datepicker__tab-loop .react-datepicker-popper .react-datepicker__triangle) {
+  stroke: var(--text); 
+   fill: var(--white);
+}
