--- a/src/components/BookingForm/BookingForm.module.css
+++ b/src/components/BookingForm/BookingForm.module.css
@@ -15,13 +15,14 @@
 
   color: var(--gray);
   font-size: 16px;
-  color:transparent;
+  color: transparent;
 }
 .fieldInput {
   width: 527px;
   display: inline-block;
   padding: 18px;
   border: none;
+  resize: none;
 }
 .button {
   max-width: 166px;
@@ -36,13 +37,10 @@
   cursor: pointer;
 }
 
-
-
 .error {
- 
   font-size: 16px;
   font-weight: 600;
-  
+
   color: red;
   text-align: center;
 }
@@ -56,9 +54,9 @@
 }
 
 :global(.react-datepicker__navigation-icon::before) {
-    border-color: var(--text);
-  }
-  :global(.react-datepicker__header) {
+  border-color: var(--text);
+}
+:global(.react-datepicker__header) {
   background-color: transparent;
   border-color: var(--text);
   border-top-left-radius: 12px;
@@ -68,10 +66,6 @@
 .customDatepicker {
   outline: none;
 }
-
-/* :global(.react-datepicker-popper){
-  transform: translateX(100px) !important;
-} */
 
 :global(.react-datepicker) {
   border-color: var(--text);
@@ -97,7 +91,7 @@
   text-transform: uppercase;
 }
 :global(.react-datepicker__day) {
-  width:36px;
+  width: 36px;
   height: 32px;
   font-family: Inter;
   font-size: 14px;
@@ -108,7 +102,6 @@
 
 :global(.react-datepicker__day--selected),
 :global(.react-datepicker__day--keyboard-selected) {
-  
   border-radius: 32px;
   background-color: var(--text);
   color: var(--inputs);
@@ -116,23 +109,12 @@
   align-items: center;
   justify-content: center;
 }
-/* :global(.react-datepicker__triangle path) {
-  fill: none; 
-   stroke:var(--text);
-   stroke-width: 1px;
-} */
 
-:global(.react-datepicker__triangle clipPath) {
-  /* fill: transparent; */
-  /* stroke:transparent; */
-}
-
-:global(.react-datepicker__triangle) {
-  /* fill: var(--text); */
-  /* stroke:transparent; */
-}
-
-:global(.react-datepicker__tab-loop .react-datepicker-popper .react-datepicker__triangle) {
-  stroke: var(--text); 
-   fill: var(--white);
+:global(
+    .react-datepicker__tab-loop
+      .react-datepicker-popper
+      .react-datepicker__triangle
+  ) {
+  stroke: var(--text);
+  fill: var(--white);
 }
