--- a/src/components/CatalogForm/CatalogForm.module.css
+++ b/src/components/CatalogForm/CatalogForm.module.css
@@ -95,6 +95,11 @@
 .text {
   text-align: center;
 }
+
+.buttonContainer {
+  display: flex;
+  justify-content: space-between;
+}
 .button {
   padding: 16px 60px;
   border: none;
